# orc

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  project.yml  vite.config.ts
Orc.xcodeproj/: project.pbxproj
apple/App/: OrcApp.swift
apple/Models/: Message.swift  Panel.swift  Surface.swift  Tab.swift  Workspace.swift
apple/Resources/: Info.plist
apple/Store/: AppStore.swift
apple/Views/: ContentView.swift
apple/Views/Agent/: AgentInputView.swift  MessageBubble.swift
apple/Views/Panel/: PanelView.swift
apple/Views/Sidebar/: SidebarView.swift  WorkspaceRow.swift
apple/Views/Surfaces/: AgentSurfaceView.swift  BrowserSurfaceView.swift  TerminalSurfaceView.swift
apple/Views/TabBar/: TabBarView.swift
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/agent/src/agent_loop/: hook.rs  mod.rs  runner.rs
crates/agent/src/config/: error.rs  mod.rs  profile.rs  store.rs
crates/agent/src/engine/: anthropic.rs  google.rs  mod.rs  openai.rs
crates/agent/src/memory/: context.rs  mod.rs  project.rs  types.rs
crates/agent/src/runtime/: engine.rs  event.rs  message.rs  mod.rs  tool.rs
crates/agent/src/session/: error.rs  manager.rs  mod.rs  state.rs
crates/agent/src/skill/: mod.rs  parser.rs  registry.rs  types.rs
crates/agent/src/team/: mod.rs  orchestrator.rs  types.rs
crates/agent/src/tool/: mod.rs  registry.rs  traits.rs
crates/agent/src/tool/builtin/: ask_user.rs  bash.rs  edit.rs  glob.rs  grep.rs  mod.rs  read.rs  web_fetch.rs  write.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/provider/: mod.rs  registry.rs  router.rs  traits.rs  types.rs
crates/core/tests/: pty_tests.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: lib.rs
crates/orc-core/: Cargo.toml
crates/orc-core/src/: error.rs  event.rs  lib.rs  session.rs
crates/orc-core/src/config/: model.rs  store.rs
crates/orc-core/src/provider/: anthropic.rs  gemini.rs  message.rs  mod.rs  oauth.rs  ollama.rs  openai.rs  stream.rs  traits.rs
crates/orc-core/src/tool/: bash.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  mod.rs  traits.rs
crates/orc-tui/: Cargo.toml
crates/orc-tui/src/: app.rs  keymap.rs  lib.rs  terminal.rs  theme.rs
src/: main.rs  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  lib.rs  main.rs  pty.rs
src/app/: App.tsx  globals.css
src/entities/message/: model.ts
src/entities/panel/: model.ts
src/entities/tab/: model.ts  ui.tsx
src/entities/workspace/: model.ts  ui.tsx
src/features/agent-chat/: model.ts  ui.tsx
src/features/split-panel/: model.ts
src/features/terminal/: ui.tsx
src/features/workspace-manage/: model.ts
src/shared/: drag-context.ts  use-keyboard-shortcuts.ts
src/widgets/panel/: ui.tsx
src/widgets/sidebar/: ui.tsx
src/widgets/tab-bar/: ui.tsx
(+15 files in other folders)
