[package]
name = "orc-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
orc-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process", "time", "fs", "io-util"] }
tokio-util = "0.7"
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-stream = "0.2"
