[package]
name = "orc-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
dirs.workspace = true
futures.workspace = true
anyhow.workspace = true
glob.workspace = true
sha2.workspace = true
base64.workspace = true
open.workspace = true
rand.workspace = true
